# rat

./: .gitignore  Cargo.toml  readme.md  spec.txt
src/: main.rs
