[package]
name = "rat"
version = "0.2.0"
edition = "2021"
description = "An alternative to tar made in rust"
liscence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
lz4_flex = "0.9.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
